src/objects/IFTP_Certification_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Additional_training__c</fullName>
        <description>Additional training required by an Airline. Not visible in Detailed View or Summary View</description>
        <inlineHelpText>Additional training required by an Airline. Not visible in Detailed View or Summary View</inlineHelpText>
        <label>Additional training</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certification__c</fullName>
        <label>Certification</label>
        <referenceTo>Certification__c</referenceTo>
        <relationshipLabel>IFTP Certification Details</relationshipLabel>
        <relationshipName>IFTP_Certification_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>General_Training__c</fullName>
        <label>General Training</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prerequisite_Level__c</fullName>
        <description>Level 2 - is a General Training required for Level 2 Proficiency Level
Level 3 - is a General Training required for Level 3 Proficiency Level</description>
        <label>Proficiency Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Level 2</fullName>
                </value>
                <value>
                    <fullName>Level 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relevant_training__c</fullName>
        <description>Airline can select aircraft type training that they consider are relevant than other</description>
        <inlineHelpText>Airline can select aircraft type training that they consider are relevant than other</inlineHelpText>
        <label>Relevant training</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retired_training__c</fullName>
        <description>If Yes - training are retired</description>
        <inlineHelpText>If Yes - training are retired</inlineHelpText>
        <label>Retired training</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>IFTP Certification Detail</label>
    <nameField>
        <label>IFTP Certification Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IFTP Certification Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>